--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,28 @@
 {
-  "name" : "waka",
-  "host" : {
-    "app" : "XD",
-    "minVersion" : "21.0"
+  "name": "WakaTime",
+  "host": {
+    "app": "XD",
+    "minVersion": "21.0"
   },
-  "id" : "bda25ac9",
-  "icons" : [ {
-    "path" : "images/icon@1x.png",
-    "width" : 24,
-    "height" : 24
-  }, {
-    "path" : "images/icon@2x.png",
-    "width" : 48,
-    "height" : 48
-  } ],
-  "uiEntryPoints" : [ {
-    "label" : "WakaTime",
-    "type" : "menu",
-    "commandId" : "wakatime"
-  } ],
-  "version" : "1.0.0"
+  "id": "bda25ac9",
+  "icons": [
+    {
+      "path": "images/wakatime24.png",
+      "width": 24,
+      "height": 24
+    },
+    {
+      "path": "images/wakatime48.png",
+      "width": 48,
+      "height": 48
+    }
+  ],
+  "uiEntryPoints": [
+    {
+      "label": "WakaTime",
+      "type": "menu",
+      "commandId": "apiKeyDialog"
+    }
+  ],
+  "version": "1.0.0"
 }
